[workspace]
resolver = "2"
members = [
    "cmd/agent",
    "cmd/operator",
    "crates/core",
    "crates/proto",
    "plugins/packetparser/common",
    "plugins/packetparser/userspace",
    "xtask",
]

# plugins/packetparser/ebpf is built separately via xtask (different target)

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/microsoft/retina"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures = "0.3"
hostname = "0.4"
k8s-openapi = { version = "0.27", features = ["v1_32"] }
kube = { version = "3", features = ["runtime", "client", "derive"] }
libc = "0.2"
packetparser = { path = "plugins/packetparser/userspace" }
netlink-packet-core = "0.8"
netlink-packet-route = "0.28"
netlink-sys = "0.8"
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"] }
prometheus-client = "0.24"
prost = "0.14"
prost-types = "0.14"
retina-common = { path = "plugins/packetparser/common" }
retina-core = { path = "crates/core" }
retina-proto = { path = "crates/proto" }
rtnetlink = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
strip = false
